--- a/anattafrontendkit/src/css/tools/_fonts.css
+++ b/anattafrontendkit/src/css/tools/_fonts.css
@@ -1,7 +1,1 @@
 /* Declare all the font faces here */
-
-@font-face {
-	font-family: 'azo-sans-web, sans-serif';
-	font-weight: normal;
-	font-style: normal;
-}
