--- a/anattafrontendkit/src/css/utilities/_common-utilities.css
+++ b/anattafrontendkit/src/css/utilities/_common-utilities.css
@@ -29,3 +29,6 @@
 	font-size: 0.875rem;
 }
 
+.u-fontAzo {
+	font-family: azo-sans-web, sans-serif;
+}
