--- a/assets/app.css
+++ b/assets/app.css
@@ -732,6 +732,12 @@ p {
     background-color: #1e242b;
     height: 34px;
 }
+.c-helloBar a {
+    opacity: 1;
+}
+.c-helloBar a:hover {
+    opacity: 1;
+}
 .c-helloBar__title {
     text-align: center;
     width: 100%;
@@ -741,12 +747,17 @@ p {
     .c-helloBar__title {
         text-align: left;
         width: auto;
-        font-size: 14px;
+        font-size: 12px;
     }
 }
-.c-helloBarNav {}
+.c-helloBar__title:hover {
+    color: #d6d7d7;
+}
+.c-helloBarNav {
+    margin-top: -5px;
+}
 .c-helloBarNav__item {
-    margin-right: 15px;
+    margin-right: 10px;
 }
 .c-helloBarNav__link {
     letter-spacing: 0.8px;
@@ -754,6 +765,12 @@ p {
 .c-header {
     background-color: #f5f5f5;
     height: 55px;
+}
+.c-header a {
+    opacity: 1;
+}
+.c-header a:hover {
+    opacity: 1;
 }
 @media (min-width: 1024px) {
     .c-header {
@@ -862,7 +879,7 @@ p {
 }
 @media (min-width: 1024px) {
     .c-header__cart svg {
-        margin: 4px 0 0 9px;
+        margin: 2px 0 0 9px;
         width: 30px;
     }
 }
@@ -871,7 +888,7 @@ p {
 }
 @media (min-width: 1024px) {
     .c-header__cart__count {
-        padding: 4px 0 0 10px;
+        padding: 0 0 0 10px;
         font-size: 18px;
     }
 }
@@ -1336,6 +1353,9 @@ p {
 .u-font_14 {
     font-size: 14px;
     font-size: 0.875rem;
+}
+.u-fontAzo {
+    font-family: azo-sans-web, sans-serif;
 }
 /* --- Trumps ----------- */
 /* high specificity selectors */
